<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.TodoItemDetailFragment">

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_selector"
        android:contentDescription="@string/edit_button_descrip"
        android:focusable="true"
        android:text="@string/edit_button_text" />

    <RelativeLayout
        android:id="@+id/item_title_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_toLeftOf="@id/edit_button"
        android:layout_toStartOf="@id/edit_button"
        android:background="@drawable/edittext_background"
        android:paddingEnd="30dp"
        android:paddingRight="30dp">

        <CheckBox
            android:id="@+id/done_check_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/checkbox_descrip"
            android:focusable="true" />

        <TextView
            android:id="@+id/todoitem_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/done_check_detail"
            android:layout_below="@+id/done_check_detail"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@id/done_check_detail"
            android:textIsSelectable="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/todoitem_detail_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/item_title_header_layout"
        android:textIsSelectable="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="20sp" />

</RelativeLayout>